# cpt-for-small-lms

./: README.md  main.py  pyproject.toml
cpt_for_slms/: evaluate_model.py  evaluator.py  lighteval_tasks.py  process_data.py  train_model.py
cpt_for_slms/configs/: default_config.yaml  ds_config.json
notebooks/: evaluator.ipynb
