[project]
name = "cpt-for-small-lms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.12"

dependencies = [
    "huggingface",
    "datasets>=4.5.0",
    "accelerate",
    "evaluate",
    "deepspeed",
    "numpy",
    "pandas",
    "scipy",
    "requests>=2.32.2",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.3",
    "loguru>=0.7.3",
    "albumentations>=2.0.8",
    "segmentation-models-pytorch>=0.5.0",
    "torch==2.10.0+cu129",
    "torchvision==0.25.0",
    "torchaudio==2.10.0",
    "ipywidgets>=8.1.8",
    "language-data>=1.4.0",
    "quantization>=0.0.1",
    "peft>=0.18.1",
    "cuda-bindings",
    "cuda-pathfinder>=1.3.3",
    "nvidia-nvshmem-cu12==3.4.5",
    "nvidia-nccl-cu12==2.27.5",
    "triton==3.6.0",
    "xformers",
    "wheel>=0.46.3",
    "setuptools>=80.10.2",
    "ninja>=1.13.0",
    "packaging>=26.0",
    "psutil>=7.2.2",
    "lighteval==0.13.0",
    "transformers>=4.51.3",
]


[tool.uv.sources]
torch = {index = "pytorch-cu129", marker = "sys_platform == 'linux'"}
torchvision = {index = "pytorch-cu129", marker = "sys_platform == 'linux'"}
torchaudio = {index = "pytorch-cu129", marker = "sys_platform == 'linux'"}
xformers = {index = "pytorch-cu129", marker = "sys_platform == 'linux'"}
#flash-attn = {url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.1/flash_attn-2.8.1+cu12torch2.9cxx11abiTRUE-cp312-cp312-linux_x86_64.whl"}



[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"


[tool.setuptools.packages.find]
    where = ["."] # Search in the current directory
    include = ["cpt_for_slms"] # Include packages starting with these names

# Configuration for uv
[tool.uv]
index-strategy = "unsafe-best-match" # Crucial for resolving complex dependency conflicts
#no-build-isolation-package = ["flash-attn"]

