[project]
name = "cpt-for-small-lms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.12"

dependencies = [
    "huggingface",
    "datasets>=4.5.0",
    "accelerate",
    "evaluate",
    "deepspeed",
    "numpy",
    "pandas",
    "scipy",
    "requests>=2.32.2",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.3",
    "loguru>=0.7.3",
    "albumentations>=2.0.8",
    "segmentation-models-pytorch>=0.5.0",
    "torch==2.9.0+cu129",
    "torchvision==0.24.0+cu129",
    "torchaudio==2.9.0+cu129",
    "ipywidgets>=8.1.8",
    "language-data>=1.4.0",
    "quantization>=0.0.1",
    "peft>=0.18.1",
    "cuda-bindings",
    "cuda-pathfinder",
    "nvidia-nccl-cu12",
    "triton",
    "xformers",
    "wheel",
    "setuptools",
    "ninja",
    "packaging",
    "psutil",
    "lighteval[multilingual]>=0.13.0",
    "transformers",
    "huggingface-hub",
    "flash-attn",
    "vllm>=0.1.2",
]


[tool.uv.sources]
torch = {index = "pytorch-cu129", marker = "sys_platform == 'linux'"}
torchvision = {index = "pytorch-cu129", marker = "sys_platform == 'linux'"}
torchaudio = {index = "pytorch-cu129", marker = "sys_platform == 'linux'"}
xformers = {index = "pytorch-cu129", marker = "sys_platform == 'linux'"}
flash-attn = {url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.11/flash_attn-2.8.3%2Bcu129torch2.9-cp312-cp312-linux_x86_64.whl"}



[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"


[tool.setuptools.packages.find]
    where = ["."] # Search in the current directory
    include = ["cpt_for_slms"] # Include packages starting with these names

# Configuration for uv
[tool.uv]
index-strategy = "unsafe-best-match" # Crucial for resolving complex dependency conflicts
no-build-isolation-package = ["flash-attn"]

